[gd_scene load_steps=4 format=3 uid="uid://c8e6a6xcxrm46"]

[ext_resource type="Script" path="res://scenes/menu/Options_menu/options_menu.gd" id="1_2ksxu"]
[ext_resource type="Texture2D" uid="uid://dfc1pw51vhp2j" path="res://art/tilesets/grass.png" id="2_q3vvf"]
[ext_resource type="FontFile" uid="uid://diiyvroyq1pc3" path="res://art/Lemon font/Lemon-Regular.ttf" id="3_4g860"]

[node name="Options_menu" type="CanvasLayer"]
visible = false
script = ExtResource("1_2ksxu")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_q3vvf")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(250, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Main_menuButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4g860")
theme_override_font_sizes/font_size = 30
text = "Back to the main menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4g860")
theme_override_font_sizes/font_size = 42
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="backToGameButton" type="Button" parent="MarginContainer/VBoxContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4g860")
theme_override_font_sizes/font_size = 30
text = "Back to the Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Main_menuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer3/backToGameButton" to="." method="_on_back_to_game_button_pressed"]
